# mdns-responder

./: .gitignore  Cargo.toml  README.md
mDNS-Responder/: mDNSWin32.c
src/: config.rs  discovery.rs  error.rs  lib.rs  mdns_service.rs  windows_service.rs
