[package]
name = "mdns_responder"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Production-ready mDNS responder for Windows SMB/Samba service advertisement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shiso/mdns-responder"
homepage = "https://github.com/shiso/mdns-responder"

[dependencies]
anyhow = "1.0"
log = "0.4"
mdns-sd = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Services"] }
windows-service = "0.7"
env_logger = "0.11"
thiserror = "1.0"
ctrlc = "3.4"
ipconfig = "0.3"

[dev-dependencies]
tempfile = "3.10.1"
rand = "0.8"

[lib]
name = "mdns_responder"
path = "src/lib.rs"

[[bin]]
name = "mdns_responder"
path = "src/bin/main.rs"